src/frontend/static/css/objects.css
td {

    font-family: "Haffer", sans-serif;
    /* color-layut-background-strong */
    text-align: center;
    border: none;
    border-top: 1px solid #E0E0E0;
    border-bottom: 1px solid #E0E0E0;
    position: relative;
    line-height: 1.0;
}

td:first-child {
    border-left: 4px solid #D1CDFF;
}

tr:hover {
    background-color: #F5F5F5;
    cursor: pointer;
}

th {

    font-family: "Haffer", sans-serif;

}

table {
    width: 100%;
    border-collapse: separate;
    border-spacing: 0 1.2px;
    table-layout: fixed;
}

.table-container {
    margin-top: 1rem;
    height: 70vh;
    overflow-y: auto;
    overflow-x: hidden;
    border: 1px solid #ccc;
    border-radius: 8px;
}

thead th {
    position: sticky;
    top: 0;
    background: white;
    z-index: 2;
}


table {
    width: 90%;
    border-collapse: seperate;
    margin-left: 5%;
}

.add-btn-container {
    position: relative;
    display: flex;
    justify-content: center;
}

.add-btn-container::before {
    content: "";
    position: absolute;
    top: 50%;
    left: 0;
    right: 0;
    background-color: #E0E0E0;
}

.add-btn {
    border: none;
    border-radius: 20px;
    background-color: #f1f1f1;
    color: #7351FB;
    padding: 0.5rem 1rem;
    font-family: "Haffer", sans-serif;
    cursor: pointer;
    position: relative;
    z-index: 1;
}

.dropdown-btn {
    border: none;
    background-color: transparent;
    cursor: pointer;
    position: relative;
    z-index: 1;
}

